/* Changes-1.08.txt */

--- New features -----

New XCore target BeagleBoneBlack has been created.

AttachmentHost.h

  Helper class for attachment/detachment implementation.

net/NetFork.h

  Support device for multitask network processing.

--- Updates ----------

Regen

  Fixed generated bar constructor and the method setTo(Bar &bar,uint32 ind).

WIN32 

  Target rebased on gcc-4.8.2 from the latest cygwin.

----------------------